--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Web-site</title>
 </head>
 <body>
-    <h1>Hello world.</h1>
+    <header class="header">
+        <h1>KER</h1>
+        <nav class="nav">
+            <a class="nv-link active" href="#">Home</a>
+            <a class="nv-link" href="#">Services</a>
+            <a class="nv-link" href="#">Contact</a>
+            <a class="nv-link" href="#">About</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="box-context">
+            <div class="information">
+                <h1 class="title"> Hi! I'm Kerwin Angeles</h1>
+                <h1 class="job">
+                    and I'm
+                    <span class="skill">Frontend Developer</span>
+                </h1>
+                <p class="description"> 
+                    Hi, my name is Kerwin Angeles Flores, 
+                    student of the technician software developer at institute technology America ITLA,
+                    I'm 21 years old, I like read, play and watch basketball and also I 
+                    like run in the park in my free time.
+    
+                </p>
+            </div>
+            <img class="profile" src="/img/kerwin.jpeg" alt="profile photo of kerwin angeles.">
+        </div>
+    </section>
 </body>
 </html>
